FlightPath 6.x Changelog
========================

2022-01-15
  Fixed bug where degrees, groups, and courses not in school 0 were showing up (and causing problems) when the schools
  module was turned off.  Changed the logic so that when schools module is not enabled, we will only be shown school=0.
  

2022-01-13
  Minor edit: cleared up wording for mass sms permission.
  
  Fixed bug where mass txt was not possible except for admin user because
  we were checking the wrong permission.
  
  Small change to fp_space_csv function, to reduce double-spaces.
  
  Fixed bug in course search edit, where it was not showing terms correctly based on school_id.
  
  Added extra message to schools module.
  
  Added ability to have user editable attributes for other users.  Must set permission. See user.api.php for help
  on how to "register" these custom attributes.
  

2022-01-12
  Added ability to register and edit user attributes from the student profile page.  Saves automatically to the user_attributes table.  Created user.api.php
  to help illustrate how the hook works.
  
  The user module also automatically adds permissions for new attributes.
  
  Added a convenience function to help "balance" the profile_items array between leftside and rightside, so we can easily "push" items onto it and
  they automatically fall into place.
  

2022-01-10
  Modified content.module to make sure a specific bug didn't happen where redirections might not be seen, as well
  as added strip_tags() to values read directly from $_REQUEST.
  
  Fixed bug in group definitions, where if there was a blank line, or somehow a course with no subject_id, it could cause a problem.
  

2022-01-09
  Removed extraneous testing functions.
    
  Added to logged 404 and 403 errors, added the location to the msg so it shows in the watchdog view.
  
  Added function to course_search to get capacity for particular course.

  Updated system to add more indexes to advising tables.
  

2022-01-08